unpackaged/main/default/objects/SO_Contract_opp__c/SO_Contract_opp__c.object-meta.xml
<CustomObject>
    <label>SO Contract Details</label>
    <nameField>
        <label>SO Contract opp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Contract Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>