unpackaged/main/default/objects/SO_Contract_opp__c/fields/Agreement_clause__c.field-meta.xml
<CustomField>
    <fullName>Agreement_clause__c</fullName>
    <label>Agreement clause</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>