unpackaged/main/default/objects/SO_Contract_opp__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>