unpackaged/main/default/objects/SO_Contract_opp__c/fields/AmountHeaders__c.field-meta.xml
<CustomField>
    <fullName>AmountHeaders__c</fullName>
    <label>AmountHeaders</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>