unpackaged/main/default/objects/SO_Contract_opp__c/fields/billing_contact_title__c.field-meta.xml
<CustomField>
    <fullName>billing_contact_title__c</fullName>
    <label>billing contact title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>