unpackaged/main/default/objects/SO_Contract_opp__c/fields/Billing_country__c.field-meta.xml
<CustomField>
    <fullName>Billing_country__c</fullName>
    <label>Billing country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>