unpackaged/main/default/objects/SO_Contract_opp__c/fields/Billing_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_Name__c</fullName>
    <label>Billing Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>