unpackaged/main/default/objects/SO_Contract_opp__c/fields/Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule__c</fullName>
    <label>Billing Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>