unpackaged/main/default/objects/SO_Contract_opp__c/fields/BillTo__c.field-meta.xml
<CustomField>
    <fullName>BillTo__c</fullName>
    <label>BillTo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>