unpackaged/main/default/objects/SO_Contract_opp__c/fields/DocType__c.field-meta.xml
<CustomField>
    <fullName>DocType__c</fullName>
    <label>DocType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>