unpackaged/main/default/objects/SO_Contract_opp__c/fields/EarlySOLIDate__c.field-meta.xml
<CustomField>
    <fullName>EarlySOLIDate__c</fullName>
    <label>EarlySOLIDate</label>
    <type>Date</type>
</CustomField>