unpackaged/main/default/objects/SO_Contract_opp__c/fields/isEvent__c.field-meta.xml
<CustomField>
    <fullName>isEvent__c</fullName>
    <label>isEvent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>