unpackaged/main/default/objects/SO_Contract_opp__c/fields/NS_Payment_Term_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Payment_Term_Name__c</fullName>
    <label>NS Payment Term Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>