unpackaged/main/default/objects/SO_Contract_opp__c/fields/opportunity_number__c.field-meta.xml
<CustomField>
    <fullName>opportunity_number__c</fullName>
    <label>opportunity number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>