unpackaged/main/default/objects/SO_Contract_opp__c/fields/Payment_Clause__c.field-meta.xml
<CustomField>
    <fullName>Payment_Clause__c</fullName>
    <label>Payment Clause</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>