unpackaged/main/default/objects/SO_Contract_opp__c/fields/SO_remarks__c.field-meta.xml
<CustomField>
    <fullName>SO_remarks__c</fullName>
    <label>SO remarks</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>