unpackaged/main/default/objects/SO_Contract_opp__c/fields/Subsidiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Name__c</fullName>
    <label>Subsidiary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>