unpackaged/main/default/objects/SO_Contract_opp__c/fields/Subsidiary_tax_label__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_tax_label__c</fullName>
    <label>Subsidiary tax label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>