unpackaged/main/default/objects/SO_Contract_opp__c/fields/SubsidiaryCode__c.field-meta.xml
<CustomField>
    <fullName>SubsidiaryCode__c</fullName>
    <label>SubsidiaryCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>