unpackaged/main/default/objects/SO_Contract_opp__c/fields/tax_reg__c.field-meta.xml
<CustomField>
    <fullName>tax_reg__c</fullName>
    <label>tax reg number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>