unpackaged/main/default/objects/SO_Contract_opp__c/fields/Total_Amount_Before__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Before__c</fullName>
    <label>Total Amount Before</label>
    <length>255</length>
    <type>Text</type>
</CustomField>