unpackaged/main/default/objects/SO_Contract_opp__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <label>Total Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>