unpackaged/main/default/objects/SO_Contract_opp__c/fields/Total_tax__c.field-meta.xml
<CustomField>
    <fullName>Total_tax__c</fullName>
    <label>Total tax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>